--- a/D3/rect_tooltip.html
+++ b/D3/rect_tooltip.html
@@ -54,7 +54,72 @@
             .attr("width", w)
             .attr("height", h);
 
-        //이후 코드 작성
+        // x축 스케일: 각 데이터 인덱스를 기반으로 한 막대 배치
+        var xScale = d3.scaleBand()
+            .domain(d3.range(dataset.length))  // [0, 1, 2, ..., 19]
+            .rangeRound([0, w])                // 전체 너비에 맞춰 배치
+            .paddingInner(0.05);               // 막대 사이 간격
+
+        // y축 스케일: 데이터 값을 높이(px)로 변환
+        var yScale = d3.scaleLinear()
+            .domain([0, d3.max(dataset)])
+            .range([0, h]);
+
+        // 막대 rect 요소 생성
+        svg.selectAll("rect")
+            .data(dataset)
+            .enter()
+            .append("rect")
+            .attr("x", function(d, i) { return xScale(i); })             // x 위치
+            .attr("y", function(d) { return h - yScale(d); })            // y 위치 (아래에서 위로 그리기 위해)
+            .attr("width", xScale.bandwidth())                           // 막대 너비
+            .attr("height", function(d) { return yScale(d); })           // 막대 높이
+            .attr("fill", function(d) { return "rgb(0, 0, " + Math.round(d * 10) + ")"; }) // 색상
+
+            // 마우스를 올렸을 때 이벤트
+            .on("mouseover", function(event, d) {
+                var xPosition = parseFloat(d3.select(this).attr("x")) + xScale.bandwidth() / 2;
+                var yPosition = parseFloat(d3.select(this).attr("y")) / 2 + h / 2;
+
+                // 툴팁 위치 및 내용 설정
+                d3.select("#tooltip")
+                    .style("left", xPosition + "px")
+                    .style("top", yPosition + "px")
+                    .select("#value")
+                    .text(d);
+
+                // 툴팁 표시
+                d3.select("#tooltip").classed("hidden", false);
+            })
+
+            // 마우스를 떼면 툴팁 숨김
+            .on("mouseout", function() {
+                d3.select("#tooltip").classed("hidden", true);
+            })
+
+            // 막대 클릭 시 정렬
+            .on("click", function() {
+                sortBars();  // 정렬 함수 호출
+            });
+
+        // 정렬 순서 상태 변수
+        var sortOrder = false;
+
+        // 막대 정렬 함수 정의
+        var sortBars = function() {
+            sortOrder = !sortOrder;  // 상태 반전 (오름차순 <-> 내림차순)
+
+            svg.selectAll("rect")
+                .sort(function(a, b) {
+                    return sortOrder ? d3.ascending(a, b) : d3.descending(a, b);
+                })
+                .transition()               // 애니메이션 설정
+                .delay(function(d, i) { return i * 50; }) // 딜레이 효과
+                .duration(1000)             // 1초 간 이동
+                .attr("x", function(d, i) {
+                    return xScale(i);       // 재배치된 인덱스를 기반으로 x 위치 설정
+                });
+        };
 
     </script>
 </body>
